[gd_scene load_steps=31 format=4 uid="uid://djxgahdmlk5yk"]

[ext_resource type="Script" uid="uid://bmj4yr0ksda7h" path="res://Scenes/L1.gd" id="1_2osvy"]
[ext_resource type="PackedScene" uid="uid://bl6wh4amp8ljg" path="res://Objects/Player/Player.tscn" id="1_f0cto"]
[ext_resource type="PackedScene" uid="uid://db6xofyn06ygh" path="res://Objects/BaseTileSetLayer.tscn" id="2_ef5wv"]
[ext_resource type="PackedScene" uid="uid://1pj0kqeuwlmr" path="res://Objects/Pickups/knife.tscn" id="3_bhcnn"]
[ext_resource type="PackedScene" uid="uid://djne5ew6vmlf7" path="res://Objects/Pickups/horns.tscn" id="3_r1lt2"]
[ext_resource type="PackedScene" uid="uid://03j3kuuki03c" path="res://Objects/Door/Door.tscn" id="4_bhcnn"]
[ext_resource type="PackedScene" uid="uid://xg3qenbbdt7b" path="res://Objects/Pickups/eyes.tscn" id="5_rcrnv"]
[ext_resource type="AudioStream" uid="uid://cblc6uk0e2lp3" path="res://Assets/Sound/Part 1 Loop.wav" id="6_rcrnv"]
[ext_resource type="Texture2D" uid="uid://bvf4q8dm7gc5b" path="res://Assets/Art/pictures.png" id="8_p6kh4"]
[ext_resource type="PackedScene" uid="uid://chrrxglfqtlrn" path="res://Objects/Chandelier/Chandelier.tscn" id="9_l1men"]
[ext_resource type="Texture2D" uid="uid://cj01bn3r67jxd" path="res://Assets/Art/moving_chandelier.png" id="9_t2vvu"]
[ext_resource type="Texture2D" uid="uid://be23n7du44cea" path="res://Assets/Art/baseTiles.png" id="10_wbmii"]
[ext_resource type="PackedScene" uid="uid://cmkmgglg2fqsn" path="res://Objects/ClimbableLayer.tscn" id="11_udm84"]
[ext_resource type="PackedScene" uid="uid://cun7swyyh6dd7" path="res://Objects/cabinet.tscn" id="12_t2vvu"]
[ext_resource type="PackedScene" uid="uid://cekx7088y5rpt" path="res://Objects/fridge.tscn" id="13_wbmii"]
[ext_resource type="Texture2D" uid="uid://bm1me3rvpld7q" path="res://Assets/Art/other.png" id="14_5kpyu"]
[ext_resource type="Texture2D" uid="uid://cbyfe6rucb0p3" path="res://Assets/Art/Furniture/furniture_sheet.png" id="14_udm84"]
[ext_resource type="Texture2D" uid="uid://187qcek3vnyx" path="res://Assets/Art/black.png" id="15_rvwe0"]
[ext_resource type="PackedScene" uid="uid://c1ls3riwjb1h" path="res://Objects/Mirror/Mirror.tscn" id="19_gv3v3"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_p6kh4"]
friction = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jdymk"]
texture = ExtResource("8_p6kh4")
texture_region_size = Vector2i(128, 128)
1:2/0 = 0
1:3/0 = 0
2:2/size_in_atlas = Vector2i(2, 1)
2:2/0 = 0
2:3/size_in_atlas = Vector2i(2, 1)
2:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mvaav"]
texture = ExtResource("9_t2vvu")
texture_region_size = Vector2i(128, 128)
0:0/size_in_atlas = Vector2i(2, 2)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, 0, 106.667, 0, 0, 21.3333)
2:0/size_in_atlas = Vector2i(2, 2)
2:0/0 = 0
0:2/size_in_atlas = Vector2i(2, 2)
0:2/0 = 0
2:2/size_in_atlas = Vector2i(2, 2)
2:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ck2ba"]
texture = ExtResource("10_wbmii")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 64, 64, 64, 64, -64, -64, -64)
3:0/next_alternative_id = 2
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
3:0/1 = 1
3:1/0 = 0
3:2/0 = 0
2:3/size_in_atlas = Vector2i(2, 1)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-119.193, -17.494, 116.86, -17.0275, 116.86, -0.699768, -119.659, -0.699768)
2:0/size_in_atlas = Vector2i(1, 3)
2:0/0 = 0
0:2/0 = 0
1:2/0 = 0
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 16, -64, 0, 24, 0, 24, 16)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, 0, -24, 16, 64, 16, 64, 8, 64, 0)

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_p6kh4"]
scenes/1/scene = ExtResource("9_l1men")
scenes/2/scene = ExtResource("12_t2vvu")
scenes/3/scene = ExtResource("13_wbmii")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5kpyu"]
texture = ExtResource("14_udm84")
texture_region_size = Vector2i(128, 128)
5:4/size_in_atlas = Vector2i(3, 4)
5:4/0 = 0
0:7/size_in_atlas = Vector2i(4, 1)
0:7/0 = 0
0:3/size_in_atlas = Vector2i(4, 1)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(234.667, -42.6667, -234.667, -42.6667, -234.667, 64, 234.667, 64)
12:6/size_in_atlas = Vector2i(2, 2)
12:6/0 = 0
12:6/0/texture_origin = Vector2i(-64, 64)
14:6/size_in_atlas = Vector2i(2, 2)
14:6/0 = 0
14:6/0/texture_origin = Vector2i(-64, 64)
14:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 0, 192, 0, 192, -21.3333, -64, -21.3333)
14:6/0/physics_layer_0/polygon_1/points = PackedVector2Array(-42.6667, -128, -42.6667, -106.667, 170.667, -106.667, 170.667, -128)
14:0/size_in_atlas = Vector2i(2, 4)
14:0/0 = 0
14:0/0/texture_origin = Vector2i(-64, 192)
14:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-42.6667, -362.667, 192, -362.667, 192, -341.333, -42.6667, -341.333)
10:6/0 = 0
10:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -8, 64, -8, 64, 30.8, -64, 30.25)
10:6/0/physics_layer_1/polygon_0/points = PackedVector2Array(-64, -8, 64, -8, 64, 32, -64, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gv3v3"]
texture = ExtResource("14_5kpyu")
texture_region_size = Vector2i(128, 128)
2:0/size_in_atlas = Vector2i(4, 4)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(-192, 192)
6:0/size_in_atlas = Vector2i(2, 2)
6:0/0 = 0
0:0/size_in_atlas = Vector2i(2, 2)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p0cam"]
texture = ExtResource("15_rvwe0")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 64, 64, 64, 64, -64, -64, -64)

[sub_resource type="TileSet" id="TileSet_5kpyu"]
resource_local_to_scene = true
tile_size = Vector2i(128, 128)
physics_layer_0/collision_layer = 1
physics_layer_0/physics_material = SubResource("PhysicsMaterial_p6kh4")
physics_layer_1/collision_layer = 2
physics_layer_1/collision_mask = 2
sources/0 = SubResource("TileSetAtlasSource_jdymk")
sources/1 = SubResource("TileSetAtlasSource_mvaav")
sources/2 = SubResource("TileSetAtlasSource_ck2ba")
sources/3 = SubResource("TileSetScenesCollectionSource_p6kh4")
sources/4 = SubResource("TileSetAtlasSource_5kpyu")
sources/5 = SubResource("TileSetAtlasSource_gv3v3")
sources/6 = SubResource("TileSetAtlasSource_p0cam")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rvwe0"]
texture = ExtResource("10_wbmii")
texture_region_size = Vector2i(128, 128)
3:0/next_alternative_id = 2
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
3:0/1 = 1

[sub_resource type="TileSet" id="TileSet_gv3v3"]
resource_local_to_scene = true
tile_size = Vector2i(128, 128)
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 2
sources/2 = SubResource("TileSetAtlasSource_rvwe0")

[node name="L1" type="Node2D"]
script = ExtResource("1_2osvy")

[node name="DarkRoom" type="ColorRect" parent="."]
unique_name_in_owner = true
offset_left = 2322.0
offset_top = -2257.0
offset_right = 2362.0
offset_bottom = -2217.0
scale = Vector2(-54.6401, -15.3189)
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 72.0
offset_top = -864.0
offset_right = 97.0
offset_bottom = -736.0
scale = Vector2(-54.6401, -15.3189)
color = Color(0.692762, 0.77555, 0.881647, 1)

[node name="Player" parent="." instance=ExtResource("1_f0cto")]
unique_name_in_owner = true
position = Vector2(440, 176)

[node name="Knife" parent="." instance=ExtResource("3_bhcnn")]
position = Vector2(3464, -72)

[node name="Horns" parent="." instance=ExtResource("3_r1lt2")]
position = Vector2(-1216, -2672)

[node name="LevelMusic" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_rcrnv")
volume_db = -25.0
autoplay = true

[node name="BaseTileSetLayer" parent="." instance=ExtResource("2_ef5wv")]
position = Vector2(-4, 0)
tile_map_data = PackedByteArray("AAADAAIAAgACAAMAAAAAAAMAAgABAAAAAAABAAMAAgABAAAAAAACAAMAAgABAAAAAAADAAMAAgABAAAAAAAEAAMAAgABAAAAAAAFAAMAAgABAAAAAAAGAAMAAgABAAAAAAAHAAMAAgABAAAAAAD//wMAAgABAAAAAAD+/wMAAgABAAAAAAD9/wMAAgABAAAAAAD8/wMAAgABAAEAAAD6//7/AgABAAEAAAD7/wMAAgABAAEAAAD6/wMAAgABAAEAAAD6/wIAAgABAAEAAAD6/wEAAgABAAEAAAD6/wAAAgABAAEAAAD6////AgABAAEAAAD8//z/AgAAAAAAAFD9//v/AgAAAAAAADD+//v/AgAAAAAAADD///v/AgAAAAAAADAAAPv/AgAAAAAAADABAPv/AgAAAAAAADACAPv/AgAAAAAAADADAPv/AgAAAAAAADAEAPv/AgAAAAAAADAFAPv/AgAAAAAAADAGAPv/AgAAAAAAADAHAPv/AgAAAAAAADD8//v/AgABAAEAAAD7//v/AgABAAEAAAD6//v/AgABAAEAAAD6//z/AgABAAEAAAD7//z/AgABAAEAAAD6//3/AgABAAEAAAD6//r/AgABAAEAAAD7//r/AgABAAEAAAD8//r/AgABAAEAAAD9//r/AgABAAEAAAD+//r/AgABAAEAAAD///r/AgABAAEAAAAAAPr/AgABAAEAAAABAPr/AgABAAEAAAACAPr/AgABAAEAAAADAPr/AgABAAEAAAAEAPr/AgABAAEAAAAFAPr/AgABAAEAAAAGAPr/AgABAAEAAAAHAPr/AgABAAEAAAAKAPz/AgADAAEAAAAIAPv/AgAAAAAAADAJAPv/AgAAAAAAADAIAAMAAgABAAAAAAAJAAMAAgABAAAAAAD6/wQAAgABAAEAAAD7/wQAAgABAAEAAAD8/wQAAgABAAEAAAD9/wQAAgABAAEAAAD+/wQAAgABAAEAAAD//wQAAgABAAEAAAAAAAQAAgABAAEAAAABAAQAAgABAAEAAAACAAQAAgABAAEAAAADAAQAAgABAAEAAAAEAAQAAgABAAEAAAAFAAQAAgABAAEAAAAGAAQAAgABAAEAAAAHAAQAAgABAAEAAAAIAAQAAgABAAEAAAAJAAQAAgABAAEAAAAKAAQAAgABAAEAAAAKAAMAAgABAAAAAAALAPz/AgADAAEAAAALAP3/AgAAAAAAAFALAP7/AgAAAAAAAFALAAMAAgABAAAAAAALAAQAAgABAAEAAAAMAAMAAgABAAAAAAANAAMAAgABAAAAAAAOAAMAAgABAAAAAAAPAAMAAgABAAAAAAAMAAQAAgABAAEAAAANAAQAAgABAAEAAAAOAAQAAgABAAEAAAAPAAQAAgABAAEAAAAQAAMAAgABAAAAAAARAAMAAgABAAAAAAASAAMAAgABAAAAAAAUAAMAAgABAAAAAAAVAAMAAgABAAAAAAAWAAMAAgABAAAAAAAXAAMAAgABAAAAAAAYAAMAAgABAAAAAAAZAAMAAgABAAAAAAAaAAMAAgABAAAAAAAbAAMAAgABAAAAAAAMAPv/AgAAAAAAADANAPv/AgAAAAAAADAIAPr/AgABAAEAAAAJAPr/AgABAAEAAAAKAPr/AgABAAEAAAAKAPv/AgABAAEAAAALAPv/AgABAAEAAAALAPr/AgABAAEAAAAMAPr/AgABAAEAAAANAPr/AgABAAEAAAANAAEAAgACAAAAAAAUAAIAAwAAAAAAAgASAAAAAAACAAIAAAAWAAAAAAABAAIAAAAKAP3/AgAAAAAAAGAKAP7/AgAAAAAAAGD8//3/AgAAAAAAAFD8//7/AgAAAAAAAFD8////AgAAAAAAAFD8/wAAAgAAAAAAAFD8/wEAAgAAAAAAAFD8/wIAAgAAAAAAAFD7//3/AgABAAEAAAD7//7/AgABAAEAAAD7////AgABAAEAAAD7/wAAAgABAAEAAAD7/wEAAgABAAEAAAD7/wIAAgABAAEAAAAQAAQAAgABAAEAAAARAAQAAgABAAEAAAASAAQAAgABAAEAAAAUAAQAAgABAAEAAAAVAAQAAgABAAEAAAAWAAQAAgABAAEAAAAXAAQAAgABAAEAAAAYAAQAAgABAAEAAAAZAAQAAgABAAEAAAAaAAQAAgABAAEAAAAbAAQAAgABAAEAAAAcAAQAAgABAAEAAAAOAPr/AgABAAEAAAAPAPr/AgABAAEAAAAQAPr/AgABAAEAAAARAPr/AgAAAAAAAFATAPr/AgAAAAAAAAAUAPr/AgAAAAAAAAAVAPr/AgAAAAAAAAAWAPr/AgAAAAAAAAAXAPr/AgAAAAAAAAAYAPr/AgAAAAAAAAAZAPr/AgAAAAAAAAAaAPr/AgAAAAAAAAAbAPr/AgABAAEAAAAOAPv/AgAAAAAAADAPAPv/AgAAAAAAADAQAPv/AgAAAAAAADARAPv/AgAAAAAAAFATAPv/AgAAAAAAADAUAPv/AgAAAAAAADAVAPv/AgAAAAAAADAWAPv/AgAAAAAAADAXAPv/AgAAAAAAADAYAPv/AgAAAAAAADAZAPv/AgAAAAAAADAaAPv/AgAAAAAAADAbAPv/AgAAAAAAADAcAP7/AgAAAAAAAGAcAP3/AgAAAAAAAGAcAPz/AgAAAAAAAGAcAPv/AgABAAEAAAAcAAMAAgABAAEAAAAJAPz/AgADAAIAAAAJAP7/AgAAAAAAAAAIAP7/AgAAAAAAAAABAP3/AwAAAAAAAQAFAP3/AwAAAAAAAQAXAP3/AwAAAAAAAQATAP3/AgAAAAAAAAASAP3/AgAAAAAAAAARAP3/AgABAAEAAAARAPz/AgAAAAAAAFARAPn/AgAAAAAAAFARAPj/AgAAAAAAAAASAPj/AgAAAAAAAAATAPj/AgAAAAAAAAAUAPj/AgAAAAAAAAAVAPj/AgAAAAAAAAAWAPj/AgAAAAAAAAAXAPj/AgAAAAAAAAAYAPj/AgAAAAAAAAAZAPj/AgAAAAAAAAAbAPn/AgAAAAAAAGAbAPj/AgAAAAAAAGAbAPf/AgAAAAAAAGAbAPb/AgABAAEAAAAaAPb/AgAAAAAAADAZAPb/AgAAAAAAADAYAPb/AgAAAAAAADAXAPb/AgAAAAAAADAWAPb/AgAAAAAAADAVAPb/AgAAAAAAAGATAPf/AgAAAAAAAFATAPb/AgAAAAAAAFAVAPX/AgAAAAAAAGAVAPT/AgAAAAAAAGAVAPP/AgAAAAAAAAAUAPP/AgAAAAAAAAATAPP/AgAAAAAAAAASAPP/AgAAAAAAAAATAPX/AgAAAAAAAFACAPj/AgAAAAAAAAABAPj/AgAAAAAAAAADAPj/AgAAAAAAAAAEAPj/AgAAAAAAAAAFAPj/AgAAAAAAAAAGAPj/AgAAAAAAAAAHAPj/AgAAAAAAAAAIAPj/AgAAAAAAAAAJAPj/AgAAAAAAAAAKAPj/AgAAAAAAAAALAPj/AgAAAAAAAAAMAPj/AgAAAAAAAAANAPj/AgAAAAAAAAAOAPj/AgAAAAAAAAAPAPj/AgAAAAAAAAAQAPj/AgAAAAAAAAAAAPj/AgAAAAEAAAAAAPH/AgAAAAAAAFATAAQAAgABAAEAAAATAAMAAgABAAAAAAARAAIAAgACAAMAAAAcAP//AgAAAAAAAGAcAAAAAgAAAAAAAGAcAAEAAgAAAAAAAGAcAAIAAgAAAAAAAGATAPz/AgADAAEAAAASAPz/AgADAAEAAAASAPv/AgADAAEAAAASAPr/AgADAAEAAAASAPn/AgADAAEAAAAUAPT/AgADAAEAAAAUAPX/AgADAAEAAAAUAPb/AgADAAEAAAAUAPf/AgADAAEAAAAVAPf/AgADAAEAAAAWAPf/AgADAAEAAAAXAPf/AgADAAEAAAAYAPf/AgADAAEAAAAZAPf/AgADAAEAAAAaAPf/AgADAAEAAAAaAPj/AgADAAEAAAAaAPn/AgADAAEAAAAZAPn/AgADAAEAAAAYAPn/AgADAAEAAAAXAPn/AgADAAEAAAAWAPn/AgADAAEAAAAVAPn/AgADAAEAAAAUAPn/AgADAAEAAAATAPn/AgADAAEAAAATAPT/AgADAAEAAAASAPT/AgADAAEAAAAUAPz/AgADAAIAADARAPT/AgADAAIAAAASAPX/AgAAAAAAAAAaAAIAAwAAAAAAAwASAPL/AgAAAAAAAGASAPH/AgAAAAAAAGASAPD/AgAAAAAAAGASAO//AgAAAAAAAGAOAPf/BAAOAAYAAAAQAPL/BAAKAAYAAAALAPf/BAAAAAMAAAACAPL/BAAKAAYAAAADAPL/BAAKAAYAAAACAPb/AgACAAAAAAAAAO//AgAAAAAAAFABAO7/AgAAAAAAADACAO7/AgAAAAAAADADAO7/AgAAAAAAADAEAO7/AgAAAAAAADAFAO7/AgAAAAAAADAGAO7/AgAAAAAAADAHAO7/AgAAAAAAADAIAO7/AgAAAAAAADAJAO7/AgAAAAAAADAKAO7/AgABAAEAAAALAO7/AgAAAAAAADAMAO7/AgAAAAAAADANAO7/AgAAAAAAADAOAO7/AgAAAAAAADAPAO7/AgAAAAAAADARAPL/BAAKAAYAAAAAAPP/AgABAAEAAAAAAPL/AgABAAEAAAASAO7/AgAAAAAAAGASAO3/AgAAAAAAAGASAOz/AgAAAAAAAGASAOv/AgAAAAAAAGASAOr/AgAAAAAAAGASAOn/AgABAAEAAAARAOn/AgAAAAAAADAQAOn/AgAAAAAAADAPAOn/AgAAAAAAADAOAOn/AgAAAAAAADANAOn/AgAAAAAAADAMAOn/AgAAAAAAADALAOn/AgAAAAAAADAKAOn/AgAAAAAAADAJAOn/AgAAAAAAADAIAOn/AgAAAAAAADAHAOn/AgAAAAAAADAGAOn/AgAAAAAAADAFAOn/AgAAAAAAADAEAOn/AgAAAAAAADADAOn/AgAAAAEAAAACAOn/AgAAAAEAAAABAOn/AgAAAAAAADAFAOr/AgADAAAAAAAGAPf/AwAAAAAAAgAKAPH/AwAAAAAAAQAKAO//AgABAAEAAAAAAO7/AgABAAEAAAAAAOr/AgABAAEAAAAAAOn/AgABAAEAAAAAAO3/AgABAAEAAAAAAOz/AgABAAEAAAAAAOv/AgABAAEAAAD///D/AgADAAIAAAABAPD/AgADAAIAADAAAPD/AgADAAEAAAD///j/AgAAAAEAAAD+//j/AgAAAAEAAAD9//j/AgAAAAEAAAD8//j/AgAAAAEAAAD7//j/AgAAAAEAAAD6//j/AgAAAAEAAAD6//n/AgABAAEAAAD7//n/AgABAAEAAAD8//n/AgABAAEAAAD9//n/AgABAAEAAAD+//n/AgABAAEAAAD///n/AgABAAEAAAAAAPn/AgABAAEAAAABAPn/AgABAAEAAAACAPn/AgABAAEAAAADAPn/AgABAAEAAAAEAPn/AgABAAEAAAAFAPn/AgABAAEAAAAGAPn/AgABAAEAAAAHAPn/AgABAAEAAAAIAPn/AgABAAEAAAAJAPn/AgABAAEAAAAKAPn/AgABAAEAAAALAPn/AgABAAEAAAAMAPn/AgABAAEAAAANAPn/AgABAAEAAAAOAPn/AgABAAEAAAAPAPn/AgABAAEAAAAQAPn/AgABAAEAAAD5//j/AgAAAAEAAAD4//j/AgAAAAEAAAD3//j/AgAAAAEAAAD2//j/AgAAAAEAAAD1//j/AgAAAAEAAAD1//n/AgABAAEAAAD1//r/AgABAAEAAAD2//r/AgABAAEAAAD3//r/AgABAAEAAAD4//r/AgABAAEAAAD5//r/AgABAAEAAAD5//n/AgABAAEAAAD4//n/AgABAAEAAAD3//n/AgABAAEAAAD2//n/AgABAAEAAAD1//f/AgAAAAEAAAD1//b/AgAAAAEAAAD1//X/AgAAAAEAAAD1//T/AgAAAAEAAAD1//P/AgAAAAEAAAD1//L/AgAAAAEAAAD1//H/AgAAAAEAAAD1//D/AgAAAAEAAAD1/+//AgAAAAEAAAD1/+7/AgAAAAEAAAD0/+3/AgABAAEAAAD0/+z/AgABAAEAAAD0/+v/AgABAAEAAAD1/+z/AgAAAAEAAAD1/+3/AgAAAAEAAAD1/+v/AgAAAAEAAAD1/+r/AgAAAAEAAAD0/+r/AgABAAEAAAD0/+n/AgABAAEAAAD1/+n/AgAAAAEAACD2/+n/AgAAAAEAACD3/+n/AgAAAAEAACD4/+n/AgAAAAEAACD5/+n/AgAAAAEAACD6/+n/AgAAAAEAACD7/+n/AgAAAAEAACD8/+n/AgAAAAEAACD9/+n/AgAAAAEAACD+/+n/AgAAAAEAACD//+n/AgAAAAEAACD0/+7/AgABAAEAAAD0/+//AgABAAEAAAD0//D/AgABAAEAAAD0//H/AgABAAEAAAD0//L/AgABAAEAAAD0//P/AgABAAEAAAD0//b/AgABAAEAAAD0//X/AgABAAEAAAD0//T/AgABAAEAAAD0//f/AgABAAEAAAD0//j/AgABAAEAAAD0//n/AgABAAEAAAD0//r/AgABAAEAAAD2//T/BAAKAAYAAAD3//T/BAAKAAYAAAD2/+v/BAAKAAYAAAD3/+v/BAAKAAYAAAD4/+v/BAAKAAYAAAD7//L/BAAKAAYAAAD//+7/BAAKAAYAAAD4/+//BAAKAAYAAAD3/+//BAAKAAYAAAD6//X/AAABAAMAAAD9//D/AAACAAMAAAD5/+3/AAACAAIAAAD+/+v/AAABAAIAAAABAO3/BQACAAAAAAD3//P/BQAAAAAAAAD7//H/BQAGAAAAAAD4/+7/BQAGAAAAAAD//+3/BQAAAAAAAAAIAOz/BgAAAAAAAAAIAO3/BgAAAAAAAAAMAO3/BgAAAAAAAAAFAO3/BgAAAAAAAAD8//X/BAAKAAYAAAD9//X/BAAKAAYAAAD8//T/BQAGAAAAAAD8/+3/BAAKAAYAAAD8/+z/BQAAAAAAAAA=")
tile_set = SubResource("TileSet_5kpyu")

[node name="ClimbableLayer" parent="." instance=ExtResource("11_udm84")]
z_index = -100
tile_map_data = PackedByteArray("AAD8//7/AgADAAAAAAD8//3/AgADAAAAAAD8//z/AgADAAAAAAAbAPf/AgADAAAAAAAbAPj/AgADAAAAAAARAPz/AgADAAAAAAARAPv/AgADAAAAAAARAPr/AgADAAAAAAARAPn/AgADAAAAAAATAPX/AgADAAAAAAATAPb/AgADAAAAAAATAPf/AgADAAAAAAATAP3/AgADAAAAAAD8/wEAAgADAAAAAAD8/wAAAgADAAAAAAD8////AgADAAAAAAASAO3/AgADAAAAAAASAO7/AgADAAAAAAASAO//AgADAAAAAAASAPD/AgADAAAAAAASAPH/AgADAAAAAAASAPL/AgADAAAAAAASAOz/AgADAAAAAAASAOv/AgADAAAAAAASAOr/AgADAAAAAAA=")
tile_set = SubResource("TileSet_gv3v3")

[node name="Eyes" parent="." instance=ExtResource("5_rcrnv")]
position = Vector2(387, -2346)

[node name="doorInitial" parent="." groups=["doors"] instance=ExtResource("4_bhcnn")]
position = Vector2(1176, 128)

[node name="Label" type="Label" parent="."]
offset_left = -280.0
offset_top = 96.0
offset_right = -64.0
offset_bottom = 136.0
text = "Jump to climb the curtain"

[node name="Label2" type="Label" parent="."]
offset_left = -232.0
offset_top = -368.0
offset_right = -64.0
offset_bottom = -312.0
text = "Jump to the chandelier!"

[node name="Label3" type="Label" parent="."]
offset_left = 1072.0
offset_top = -472.0
offset_right = 1197.0
offset_bottom = -449.0
text = "Go into the vent"

[node name="doorInitial2" parent="." groups=["doors"] instance=ExtResource("4_bhcnn")]
position = Vector2(-4, -1280)

[node name="Mirror" parent="." instance=ExtResource("19_gv3v3")]
position = Vector2(-1208, -1096)

[connection signal="_pickup" from="Player" to="." method="_on_player__pickup"]
